dernier commit manque le grid

--- a/astralEnfant/style.css
+++ b/astralEnfant/style.css
@@ -18,7 +18,9 @@ img {
 h3 {
   color: blue;
 }
-
+.divConference{
+  margin-top: 50px;
+}
 .divConference h4 {
   position: absolute;
   left: 14%;
